Adding sharps and flats

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,21 +15,43 @@
         </div>
 
         <div class="forms-flexbox">
+                <!-- note level -->
                 <div class="levels">
-                    <input type="radio" id="basic" class="radio-btn" name="level" value="basic" checked>
-                    <label class="badge label" for="basic">Basic</label><br>
-                    <input type="radio" id="treble" class="radio-btn" name="level" value="treble">
-                    <label class="badge label" for="treble">Treble line</label><br>
-                    <input type="radio" id="bass" class="radio-btn" name="level" value="bass">
-                    <label class="badge label" for="bass">Bass line</label><br>
-                    <input type="radio" id="all" class="radio-btn" name="level" value="all">
-                    <label class="badge label" for="all">All of it</label>
+                    <input type="radio" id="basic" class="radio-btn level" name="level" value="basic" checked>
+                    <label class="badge label" for="basic">basic</label><br>
+                    <input type="radio" id="treble" class="radio-btn level" name="level" value="treble">
+                    <label class="badge label" for="treble">treble line</label><br>
+                    <input type="radio" id="bass" class="radio-btn level" name="level" value="bass">
+                    <label class="badge label" for="bass">bass line</label><br>
+                    <input type="radio" id="all" class="radio-btn level" name="level" value="all">
+                    <label class="badge label" for="all">all of it</label>
+                </div>
+                <!-- accidental level -->
+                <div class="accidentals-form">
+                    <!-- which accidentals to include -->
+                    <div class="levels">
+                        <input type="radio" id="no-accidental" class="radio-btn accidental" name="accidental" value="noAccidental" checked>
+                        <label class="badge label" for="no-accidental">no accidentals</label><br>
+                        <input type="radio" id="sharp-accidental" class="radio-btn accidental" name="accidental" value="sharpAccidental">
+                        <label class="badge label" for="sharp-accidental">sharp only</label><br>
+                        <input type="radio" id="flat-accidental" class="radio-btn accidental" name="accidental" value="flatAccidental">
+                        <label class="badge label" for="flat-accidental">flat only</label><br>
+                        <input type="radio" id="all-accidental" class="radio-btn accidental" name="accidental" value="allAccidental">
+                        <label class="badge label" for="all-accidental">sharp and flat</label>
+                    </div>
+                    <div class="levels">
+                        <!-- to include accidentals with regular notes or to just use accidentals -->
+                        <input type="radio" id="accidental-only" class="radio-btn accidental-combine" name="accidental-combine" value="only">
+                        <label class="badge label" for="accidental-only">only accidentals</label><br>
+                        <input type="radio" id="accidental-include" class="radio-btn accidental-combine" name="accidental-combine" value="include" checked>
+                        <label class="badge label" for="accidental-include">include accidentals</label>
+                    </div>
                 </div>
         </div>
 
         <!-- Play button -->
         <div class="forms-flexbox">
-            <a id="play" data-playurl="{{url_for('main.play', level='')}}" class="btn btn-success btn-lg btn-block">Play</a>
+            <a id="play" data-playurl="{{url_for('main.play')}}" class="btn btn-success btn-lg btn-block">Play</a>
         </div>
 
         <div class="cheat-sheet headers">
