--- a/app/templates/piano.html
+++ b/app/templates/piano.html
@@ -13,7 +13,7 @@
 {% block page_content %}
 
     <!-- container to place VexFlow music sheet -->
-    <div id="vexflow-space" data-level="{{ level }}"></div>
+    <div id="vexflow-space" data-level="{{ level }}" data-flats="{{ flats }}" data-sharps="{{ sharps }}" data-accidentals="{{ accidentals }}"></div>
 
     <!-- counter and score -->
     <div class="play-scoreboard label">
@@ -30,10 +30,10 @@
     <!-- Creates the piano shape and adds audio notes to correspond to each key -->
     <div class="piano">
         {% for note in notes %}
-        <div data-note="{{ note.name }}" class="key {{ note.color }} {{ note.name }}">
-            <span class="noteLabel" id="label{{note.name}}">{{note.name}}</span>
-        </div>
-        <audio id="{{ note.name }}" src="{{url_for('static', filename='sounds/' + note.name + '4.mp3')}}"></audio>
+            <div data-note="{{ note.name }}" data-alt="{{ note.alt }}" data-sharp="{{ note.sharp }}" data-flat="{{ note.flat }}" class="key {{ note.color }}">
+                <span class="noteLabel" id="label{{note.name}}">{{ note.alt }}</span>
+            </div>
+            <audio id="{{ note.name }}" src="{{url_for('static', filename='sounds/' + note.name + '4.mp3')}}"></audio>
         {% endfor %}
     </div>
 
