--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -180,6 +180,7 @@ body {
     height: calc(var(--width) * 2.7);
     width: var(--width);
     text-align: center;
+    border: 1px solid #333;
 }
 /* displays color of the piano key depending if the user guessed coorectly or not */
 .key.correct {
@@ -205,7 +206,7 @@ body {
 .white {
     --width: 90px;
     background-color: ivory;
-    border: 1px solid #333;
+    /* border: 1px solid #333; */
 }
 .black {
     --width: 52px;
