--- a/app/templates/auth/auth_forms.html
+++ b/app/templates/auth/auth_forms.html
@@ -15,6 +15,7 @@
     <div class="forms-flexbox">
         <div class="form-container">
             <!-- Bootstrap creation of a FORM -->
+            <!-- {{ form.submit(class_='input-small') }} -->
             {{ wtf.quick_form(form) }}
 
             {% if title == 'login' %}
