--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -25,7 +25,7 @@ body {
 .main-container {
     width: 100%;
     /* min-height: 100vh; */
-    padding: 30px;
+    /* padding: 30px; */
     margin: auto;
     padding-bottom: 0px;
 }
@@ -117,7 +117,7 @@ body {
 /* ---------------------------------------- */
 .headers {
     color: ivory;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     margin-bottom: 30px;
     display: flex;
     justify-content: center;
@@ -330,21 +330,29 @@ body {
     border-radius: 50%;
     text-align: center;
     display: none;
+    color: #73AD21;
 }
 /* displays if active */
 #circular-sb.active {
     display: block;
 }
+/* turn red if wrong */
+#circular-sb.wrong{
+    border: 3px solid red;
+    color: red;
+}
 /* the p displaying the HINT letters */
 #note-hint {
-        color: #73AD21;
+        /* color: #73AD21; */
+        color: inherit;
         font-style: italic;
         font-family: cursive;
         font-size: 2.5rem;
 }
 #circular-sb > div {
     background-color: beige;
-    border: 3px solid #73AD21;
+    /* border: 3px solid #73AD21; */
+    border: inherit;
     position: absolute;
     border-radius: 50%;
 }
