--- a/app/templates/piano.html
+++ b/app/templates/piano.html
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <div class="cheat-sheet headers">
+    <div class="cheat-sheet headers" id="bottom-item">
         <p> Open <a class="link" href="{{url_for('static', filename='grand_staff.jpg')}}" target="_blank">Notes Cheat Sheet</a> for help</p>
     </div>
 
