--- a/app/templates/piano.html
+++ b/app/templates/piano.html
@@ -57,7 +57,7 @@
             <a id="btn-pause" class="btn btn-success btn-lg btn-block">Start</a>
         </div>
         <div class="btn-container">
-            <a id="btn-exit" data-exiturl="{{ url_for('main.exit', score='') }}" class="btn btn-success btn-lg btn-block">Exit</a>
+            <a id="btn-exit" data-exiturl="{{ url_for('main.exit') }}" class="btn btn-success btn-lg btn-block">Exit</a>
         </div>
     </div>
 
