--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -255,6 +255,13 @@ body {
 .link:hover {
     font-style: italic;
 }
+.main-header a {
+    color: inherit;
+    text-decoration: none;
+ }
+ .main-header a:hover{
+     font-style: italic;
+ }
 /* overrides the radio button to style it */
 /* -------------------------------------------- */
 .levels > input[type="radio"] {
