--- a/app/templates/auth/email/confirm.html
+++ b/app/templates/auth/email/confirm.html
@@ -29,7 +29,7 @@
 <body>
 
     <div class="email-text">
-        <a id="logo" href="http://127.0.0.1:5000/">finetune</a>
+        <a id="logo" href="{{url_for('main.index')}}">finetune</a>
 
         <div>Thanks for signing up with Finetune! You must follow this link within 60 minutes of registration to activate your account</div>
 
