--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
         <div class="headers">
                 <div class="main-header">
                     <h1>Welcome to finetune</h1>
-                    <h3> game that lets you practice piano sight reading</h3>
+                    <h3>game that lets you practice piano sight reading</h3>
                 </div>
         </div>
 
@@ -28,6 +28,10 @@
                 href="{{url_for('auth.login')}}" >Login
             {% endif %}
             </a>
+        </div>
+
+        <div class="cheat-sheet headers">
+            <p class="checkout-employer">check out the <span>Employers</span> tab on the Navbar for <span>Specs</span></p>
         </div>
 
 {% endblock %}
