--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,13 +23,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" id="logo" href="/">finetune</a>
+                <a class="navbar-brand" id="logo" href="{{url_for('main.index')}}">finetune</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     {% if current_user.is_authenticated %}
                     <li>
-                        <a href="/home">Home</a>
+                        <a href="{{url_for('main.home')}}">Home</a>
                     </li>
                     <li>
                         <a href="{{ url_for('main.user', username=current_user.username) }}">
@@ -64,6 +64,16 @@
                     {% else %}
                     <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
                     {% endif %}
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" id="logo" data-toggle="dropdown">
+                            employers <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu ms-auto">
+                            <li><a href="{{url_for('static', filename='oleg_lyaskoronskiy_resume.pdf')}}" target="_blank">Oleg's Resume</a></li>
+                            <li><a href="https://github.com/oleglyask/finetune" target="_blank">GitHub Code</a></li>
+                            <li><a href="{{ url_for('main.specs') }}">Game Specs</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
